23 February 2012: Wouter
	- Fix to squelch 'network unreachable' errors from tcp connect in
	  logs, high verbosity will show them.

16 February 2012: Wouter
	- iter_hints is now thread-owned in module env, and thus threadsafe.
	- Fix prefetch and sticky NS, now the prefetch works.  It picks
	  nameservers that 'would be valid in the future', and if this makes
	  the NS timeout, it updates that NS by asking delegation from the
	  parent again.  If child NS has longer TTL, that TTL does not get
	  refreshed from the lookup to the child nameserver.

15 February 2012: Wouter
	- Fix forward-zone memory, uses malloc and frees original root dp.
	- iter hints (stubs) uses malloc inside for more dynamicity.
	- unbound-control forward_add, forward_remove, stub_add, stub_remove
	  can modify stubs and forwards for running unbound (on mobile computer)
	  they can also add and remove domain-insecure for the zone.

14 February 2012: Wouter
	- Fix sticky NS (ghost domain problem) if prefetch is yes.
	- iter forwards uses malloc inside for more dynamicity.

13 February 2012: Wouter
	- RT#2955. Fix for cygwin compilation. 
	- iana portlist updated.

10 February 2012: Wouter
	- Slightly smaller critical region in one case in infra cache.
	- Fix timeouts to keep track of query type, A, AAAA and other, if
	  another has caused timeout blacklist, different type can still probe.
	- unit test fix for nomem_cnametopos.rpl race condition.

9 February 2012: Wouter
	- Fix AHX_BROKEN_MEMCMP for autoheader mess up of #undef in config.h.

8 February 2012: Wouter
	- implement draft-ietf-dnsext-ecdsa-04; which is in IETF LC; This
	  implementation is experimental at this time and not recommended
	  for use on the public internet (the protocol numbers have not
	  been assigned).  Needs recent ldns with --enable-ecdsa.
	- fix memory leak in errorcase for DSA signatures.
	- iana portlist updated.
	- workaround for openssl 0.9.8 ecdsa sha2 and evp problem.

3 February 2012: Wouter